fix on artist overflow

--- a/app/assets/stylesheets/components/_artists.scss
+++ b/app/assets/stylesheets/components/_artists.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   font-family: 'Work Sans', sans-serif;
-  overflow: hidden;
+  overflow: auto;
   flex-wrap: nowrap;
 }
 
@@ -179,7 +179,7 @@
   justify-content: space-between;
   width: 600px;
   margin-top: 1em;
-  overflow: auto;
+
 }
 
 .artist-card{
